<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WyzAntAndroid</string>
    <string name="label_title">WyzAnt Tutor Finder</string>
    <string name="label_subject">Subject</string> <!--kw-->
    <string name="label_zip">ZIP code</string> <!--z-->
    <string name="label_distance">Distance in Miles</string> <!--d-->
    <string name="label_hourly_rate">Hourly Rate Range</string> <!--minh, maxh; 10..200-->
    <string name="label_age">Age Range</string> <!--mina, maxa; 18..100-->
    <string name="label_gender">Gender</string> <!--im-->
    <string name="label_bg_check">Background check</string> <!--bgCheck-->

    <string name="label_search">Search</string>

    <string name="baseUrl">http://www.wyzant.com/</string>
    <string name="baseQuery">tutorsearch</string>
    <string name="query">preview here</string>
    <string name="rateMin">10</string>
    <string name="rateMax">200</string>
    <string name="ageMin">18</string>
    <string name="ageMax">100</string>

    <string-array name="options_distance">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
    </string-array>

    <string-array name="options_gender">
        <item>No preference</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string name="tutors_title">Tutors available</string>
    <string name="dummyPortrait">portrait goes here</string>
    <string name="dummyName">name goes here</string>
    <string name="dummyRate">rate goes here</string>
    <string name="dummyDistance">distance goes here</string>
    <string name="dummyTagline">tagline goes here</string>
    <string name="buttonLabel">View this Tutor</string>
</resources>
