<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="#FF7744"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_subject"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subjectField"
        android:inputType="textAutoComplete"
        android:background="#FFFFFF"
        android:layout_margin="8dip"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_zip"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/label_distance"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/zipField"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_margin="8dip"
            />

        <Spinner
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/distField"
            android:inputType="text"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_margin="8dip"
            />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_hourly_rate"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rateLowerField"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:layout_margin="8dip"
            android:background="#FFFFFF"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rateUpperField"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:layout_margin="8dip"
            android:background="#FFFFFF"
            />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_age"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ageLowerField"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:layout_margin="8dip"
            android:background="#FFFFFF"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ageUpperField"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:layout_margin="8dip"
            android:background="#FFFFFF"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_gender"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genderField"
                android:inputType="text"
                android:background="#FFFFFF"
                android:layout_margin="8dip"
                />

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_bg_check"
            android:id="@+id/checkBox"
            android:background="#FFFFFF"
            android:layout_gravity="right"
            android:layout_margin="12dip"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_search"
        android:id="@+id/search"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/query"
            android:id="@+id/queryPreview"
            android:background="#FFFFFF"
            />

    </LinearLayout>

</LinearLayout>

