<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="#FF8500"

    >

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageBanner"
            android:src="@drawable/wyzantbanner"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/label_title" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_subject"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subjectField"
        android:inputType="textAutoComplete"
        android:background="#FFFFFF"
        android:layout_margin="8dip"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_zip"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/label_distance"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/zipField"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_margin="8dip"
            />

        <Spinner
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/distField"
            android:inputType="text"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_margin="8dip"
            />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_hourly_rate"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        />

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"

            >

    <TextView
            android:id="@+id/lowerRateRange"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_gravity="center"

            />
    <TextView
            android:id="@+id/upperRateRange"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_gravity="end"
            />

    </LinearLayout>
    <!--Rate Range SeekBar-->
    <LinearLayout
            android:id="@+id/rateRange"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_age"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"

            >

        <TextView
                android:id="@+id/lowerAgeRange"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:textSize="15sp"
                android:layout_weight="1"
                android:layout_gravity="center"

                />
        <TextView
                android:id="@+id/upperAgeRange"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:layout_gravity="end"
                />

    </LinearLayout>

    <!--Age Range Bar-->
        <LinearLayout
                android:id="@+id/ageRange"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_gender"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


            <Spinner
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/genderField"
                android:inputType="text"
                android:background="#FFFFFF"
                android:layout_margin="8dip"
                />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_bg_check"
            android:id="@+id/checkBox"
            android:background="#FFFFFF"
            android:layout_margin="12dip"
            android:padding="4dp"
            android:gravity="bottom"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_search"
        android:id="@+id/search"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:layout_margin="16dp"/>

    <!--<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/query"
            android:id="@+id/queryPreview"
            android:background="#FFFFFF"
            />

    </LinearLayout>-->

</LinearLayout>

